<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorq1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <RadioGroup
                android:id="@+id/quest1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer11"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer12"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer13"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer14"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorq2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <RadioGroup
                android:id="@+id/quest2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer_21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer21"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer22"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer23"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer24"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorq3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <CheckBox
                android:id="@+id/answer_31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer31"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/answer_32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer32"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/answer_33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer33"
                android:textAppearance="?android:textAppearanceMedium" />
            <CheckBox
                android:id="@+id/answer_34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/answer34"
                android:textAppearance="?android:textAppearanceMedium" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorq4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:hint="@string/answer4"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <EditText
                android:id="@+id/answer_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer4"
                android:inputType="text" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorq5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <RadioGroup
                android:id="@+id/quest5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/answer_51"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer51"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer52"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer53"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/answer_54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer54"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitQuiz"
        android:text="@string/res"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"/>


</LinearLayout>
</ScrollView>